# T.R.Y.B.I.K.

./: commands.py  kill.py  main.py  pyproject.toml  recognizer.py  todo.py  trybik_ee.py  trybik_kopia.py  tts.py  visualizer.py  web.py
