[tool.poetry]
name = "trybik"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SpeechRecognition = "^3.8.1"
playsound = "^1.3.0"
psutil = "^5.9.1"
pygame = "^2.1.2"
pynput = "^1.7.6"
wikipedia = "^1.4.0"
gTTS = "^2.2.4"
librosa = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
